--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -239,8 +239,7 @@
   pages = {2370-2377},
   year = {1998},
   doi = {10.1063/1.872911},
-  URL = {https://doi.org/10.1063/1.872911},
-  eprint = {https://doi.org/10.1063/1.872911}
+  URL = {https://doi.org/10.1063/1.872911}
 }
 
 @Thesis{Shevelev2019th, 
@@ -265,8 +264,7 @@
   pages = {238-252},
   year = {1999},
   doi = {10.1063/1.873276},
-  URL = {https://doi.org/10.1063/1.873276},
-  eprint = {https://doi.org/10.1063/1.873276}
+  URL = {https://doi.org/10.1063/1.873276}
 }
 
 @article{Bakhtiari2005,
@@ -278,8 +276,7 @@
   pages = {102503},
   year = {2005},
   doi = {10.1063/1.2065368},
-  URL = { https://doi.org/10.1063/1.2065368},
-  eprint = { https://doi.org/10.1063/1.2065368}
+  URL = { https://doi.org/10.1063/1.2065368}
 }
 
 @article{Carbajal2017,
@@ -291,8 +288,7 @@
   pages = {042512},
   year = {2017},
   doi = {10.1063/1.4981209},
-  URL = { https://doi.org/10.1063/1.4981209},
-  eprint = { https://doi.org/10.1063/1.4981209}
+  URL = { https://doi.org/10.1063/1.4981209}
 }
 
 @book{Abdullaev2016,
@@ -611,8 +607,7 @@
   pages = {809-811},
   year = {1985},
   doi = {10.1063/1.1138180},
-  URL = { https://doi.org/10.1063/1.1138180},
-  eprint = { https://doi.org/10.1063/1.1138180 }
+  URL = { https://doi.org/10.1063/1.1138180}
 }
 
 @book{Kuznetsov1974,
@@ -647,8 +642,7 @@
   pages = {11E602},
   year = {2016},
   doi = {10.1063/1.4961288},
-  URL = {https://aip.scitation.org/doi/abs/10.1063/1.4961288},
-  eprint = {https://aip.scitation.org/doi/pdf/10.1063/1.4961288}
+  URL = {https://aip.scitation.org/doi/abs/10.1063/1.4961288}
 }
 
 @article{Seltzer1985,
@@ -674,8 +668,7 @@
   pages = {2350-2360},
   year = {2003},
   doi = {10.1063/1.1574328},
-  URL = { https://doi.org/10.1063/1.1574328},
-  eprint = { https://doi.org/10.1063/1.1574328}
+  URL = { https://doi.org/10.1063/1.1574328}
 }
 
 @article{Vlainic2015, 
@@ -713,8 +706,7 @@
   pages = {10D321},
   year = {2010},
   doi = {10.1063/1.3501386},
-  URL = { https://doi.org/10.1063/1.3501386},
-  eprint = { https://doi.org/10.1063/1.3501386}
+  URL = { https://doi.org/10.1063/1.3501386}
 }
 
 
@@ -727,8 +719,7 @@
   pages = {4243-4245},
   year = {2002},
   doi = {10.1063/1.1519938},
-  URL = { https://doi.org/10.1063/1.1519938 },
-  eprint = { https://doi.org/10.1063/1.1519938 }
+  URL = { https://doi.org/10.1063/1.1519938 }
 }
 
 @article{Pankratov1999,
@@ -751,8 +742,7 @@
   pages = {093302},
   year = {2013},
   doi = {10.1063/1.4821823},
-  URL = {  https://doi.org/10.1063/1.4821823   },
-  eprint = { https://doi.org/10.1063/1.4821823 }
+  URL = {  https://doi.org/10.1063/1.4821823   }
 }
 
 @article{Costley1974,
@@ -819,8 +809,7 @@
   pages = {062505},
   year = {2017},
   doi = {10.1063/1.4985086},
-  URL = { https://doi.org/10.1063/1.4985086},
-  eprint = { https://doi.org/10.1063/1.4985086}
+  URL = { https://doi.org/10.1063/1.4985086}
 }
 
 @article{Strachan1977,
@@ -860,8 +849,7 @@
   pages = {11E111},
   year = {2014},
   doi = {10.1063/1.4890398},
-  URL = {  https://doi.org/10.1063/1.4890398  },
-  eprint = {  https://doi.org/10.1063/1.4890398 }
+  URL = {  https://doi.org/10.1063/1.4890398  }
 }
 
 @article{Pereira2008,
@@ -1072,8 +1060,7 @@
   pages = {043537},
   year = {2021},
   doi = {10.1063/5.0043806},
-  URL = { https://doi.org/10.1063/5.0043806},
-  eprint = { https://doi.org/10.1063/5.0043806}
+  URL = { https://doi.org/10.1063/5.0043806}
 }
 
 @article{Curuia2017,
@@ -1125,8 +1112,7 @@
   pages = {10I116},
   year = {2018},
   doi = {10.1063/1.5038839},
-  URL = {https://doi.org/10.1063/1.5038839 },
-  eprint = { https://doi.org/10.1063/1.5038839}
+  URL = {https://doi.org/10.1063/1.5038839 }
 }
 
 @article{Fernandes2018,
@@ -1150,8 +1136,7 @@
   pages = {10E524},
   year = {2008},
   doi = {10.1063/1.2964205},
-  url = {https://doi.org/10.1063/1.2964205},
-  eprint = {https://doi.org/10.1063/1.2964205}
+  url = {https://doi.org/10.1063/1.2964205}
 }
 
 @unpublished{Shevelev2013a,
@@ -1177,8 +1162,7 @@
   pages = {072506},
   year = {2014},
   doi = {10.1063/1.4886802},
-  URL = {https://doi.org/10.1063/1.4886802},
-  eprint = {https://doi.org/10.1063/1.4886802}
+  URL = {https://doi.org/10.1063/1.4886802}
 }
 
 
@@ -1227,8 +1211,7 @@
   pages = {151-178},
   year = {1994},
   doi = {10.1142/S0129183194000118},
-  URL = { https://doi.org/10.1142/S0129183194000118},
-  eprint = { https://doi.org/10.1142/S0129183194000118 }
+  URL = { https://doi.org/10.1142/S0129183194000118}
 }
 
 @article{VanCittert1931,
