--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,23 +1,24 @@
 
 {\actuality}
 
-Неотъемлемой особенностью токамака как системы удержания плазмы является то, что ограниченная плазма должна пропускать значительный ток, а соответствующая магнитная энергия больше, чем кинетическая энергия частиц, несущих ток. Объемные электроны являются носителями тока в термоядерной плазме при номинальных условиях, однако скорость электронного потока намного меньше, чем тепловые скорости электронов. Однако при некоторых условиях происходит так что небольшая популяция электронов с высокой надтепловой температурой становится значительным или даже доминирующим носителем тока. Основная причина такого явления заключается в том, что сила трения для быстрых электронов уменьшается с увеличением скорости. Электроны могут при этом претерпевать неограниченное ускорение электрическим полем; находящиеся в таком режиме электроны называют убегающими. Убегающие электроны (УЭ) долгое время были предметом пристального внимания в исследованиях плазмы как по академическим, так и по практическим причинам. Они могут вызывать пробой газа в сильных электрических полях, в том числе при атмосферных молниях, они могут присутствовать в событиях магнитного перезамыкания и могут генерироваться намеренно для создания пучков электронов высокой энергии. Многие аспекты физики электронного пучка и взаимодействия пучка с плазмой естественным образом относятся к поведению УЭ. Одним из таких аспектов является возбуждение волн быстрыми электронами либо в форме спонтанного нетеплового излучения, либо в виде вынужденного излучения, ведущего к электронным неустойчивостям \cite{Breizman2019}.
+Неотъемлемой особенностью токамака как системы удержания плазмы является то, что ограниченная плазма должна пропускать через себя значительный электрический ток. Объемные электроны являются носителями тока в термоядерной плазме в нормальных условиях работы токамака, но скорость электронного потока намного меньше, чем тепловые скорости электронов. Однако при некоторых условиях возникает ситуация, при которой существенная или даже большая часть тока плазмы переносится небольшой популяцией электронов с высокой надтепловой энергией. Основная причина возникновения такого явления заключается в том, что сила трения за счёт столкновений для быстрых электронов уменьшается с увеличением скорости. Электроны могут при этом переходить в режим неограниченного ускорения электрическим полем; находящиеся в таком режиме электроны называют убегающими. Убегающие электроны долгое время были предметом пристального внимания в исследованиях плазмы как по академическим, так и по практическим причинам. Они могут приводить к пробою газа в сильных электрических полях, в том числе и при атмосферных молниях, они могут присутствовать в событиях магнитного перезамыкания и могут генерироваться намеренно для создания пучков электронов высокой энергии.~\cite{Breizman2019}
 
-Столкновительные процессы для убегающих электронов играют намного меньшую роль, чем для основной массы электронов плазмы, поэтому их распределение по энергии существенно отличается от максвелловского. Ещё ранние теоретические исследования установили два механизма возникновения убегающих электронов: уход электронов из максвелловского хвоста в зону убегания и вторичные столкновения, которые увеличивают популяцию убегающих электронов в геометрической прогрессии. Убегающие электроны повсеместно присутствуют в плазме во время электрического пробоя газа в самом начале разряда, но их ток обычно остается относительно небольшим к тому времени, когда плазма нагревается и становится хорошим проводником, после чего они постепенно тк или иначе исчезают. Завершение разряда в штатных режимах работы обычно не вызывает повторного рождения убегающих электронов, однако если время отключения должно быть очень коротким в аварийной ситуации, то убегающие электроны во время гашения разряда становятся уже достаточно многочисленны (\cite{Breizman2019}). На токамаке JET ток УЭ в процессе срыва может достигать значений 1~МА и выше и составлять 70\% и выше от полного тока по плазме \autocite{Smith2006}. На более крупных токамаках, таких как ИТЭР, следует ожидать ещё больших значений величины тока УЭ; так, согласно данным численного моделирования, величина тока УЭ на токамаке ИТЭР в некоторых сценариях может превышать 10~МА \cite{Smith2006}. При этом пучок убегающих электронов может повреждать конструктивные элементы термоядерных реакторов (\autocite{Bazylev2011}, рисунок \cref{fig:electrons-wall}).
+Столкновительные процессы для убегающих электронов играют намного меньшую роль, чем для основной массы электронов плазмы, поэтому распределение убегающих электронов по энергии существенно отличается от максвелловского. Ещё ранние теоретические исследования установили два механизма возникновения убегающих электронов: переход электронов из максвелловского хвоста в режим убегания и вторичный лавинный механизм, при котором за счёт столкновений популяция убегающих электронов может увеличиваться в геометрической прогрессии. Убегающие электроны повсеместно присутствуют в плазме во время электрического пробоя газа в самом начале разряда, но их ток обычно остается относительно небольшим к тому vjvtyne, когда плазма нагревается и её сопротивление падает, после чего они постепенно так или иначе исчезают. Завершение разряда в штатных режимах работы токамака обычно не вызывает повторного рождения убегающих электронов, однако если время отключения должно быть очень коротким в аварийной ситуации, то убегающие электроны во время гашения разряда могут появляться в достаточно большом количестве.~\cite{Breizman2019} На токамаке JET ток убегающих электронов в процессе срыва может достигать значений 1~МА и выше и составлять 70\% и выше от полного тока по плазме.~\cite{Smith2006} 
+На более крупных токамаках, таких как ИТЭР, следует ожидать ещё больших значений величины тока; так, согласно данным численного моделирования, величина тока убегающих электронов на токамаке ИТЭР в некоторых сценариях может превышать 10~МА.~\cite{Smith2006} При этом пучок убегающих электронов может повреждать конструктивные элементы термоядерных реакторов (рисунок~\ref{fig:electrons-wall}).~\cite{Bazylev2011}
 
 \begin{figure}[ht]
   \centerfloat{ \includegraphics[width=0.80\linewidth]{electrons-wall} }
-  \caption{ Повреждения внутренней стенки токамака JET пучком убегающих электронов (\cite{Matthews2016}).}
+  \caption{ Повреждения внутренней стенки токамака JET пучком убегающих электронов.~\cite{Matthews2016}}
   \label{fig:electrons-wall}
 \end{figure}
 
-В более крупных токамаках, таких как ИТЭР, токи и энергии пучка убегающих электронов будут ещё выше. Так, согласно требованиям к диагностике убегающих электронов, возможные значения энергии составляют до 100~МэВ, а значения тока - до 70\% от полного тока по плазме \cite{Donne2007}. 
+В более крупных токамаках, таких как ИТЭР, токи и энергии пучка убегающих электронов будут ещё выше. Так, согласно требованиям к диагностике убегающих электронов, возможные значения энергии составляют до 100~МэВ, а значения тока - до 70\% от полного тока по плазме.~\cite{Donne2007}
 
-Эмиссия тормозного излучения --- один из наиболее широко используемых диагностических инструментов для диагностики убегающих электронов в токамаках \cite{Breizman2019,Knoepfel1979}. Замедляясь в веществе, убегающие электроны генерируют тормозное излучение, энергия которого приходится на диапазон от дисятков кэВ до десятков МэВ и выше \cite{Shevelev2014}. Тормозное излучение от УЭ может быть объемным тормозным излучением <<тонкой мишени>>, когда УЭ рассеивается ионами плазмы, или тормозным излучением <<толстой мишени>>, когда УЭ сталкиваются с материалами камеры токамака, обращенными к плазме. Объемная эмиссия доминирует, когда УЭ хорошо удерживаются, тогда как поверхностное тормозное излучение преобладает во время быстрого выхода УЭ на внутреннюю поверхность токамака в связи с МГД неустойчивостями, или если линия обзора спектрометра пересекает лимитер, а так же в некоторых других случаях \cite{Breizman2019}. 
+Регистрация тормозного излучения --- один из наиболее широко используемых инструментов для диагностики убегающих электронов в токамаках.~\cite{Breizman2019,Knoepfel1979} В ходе замедления в резульате рассеяния на ионах плазмы или при взаимодействии с конструкциями установки убегающие электроны генерируют тормозное излучение, энергия которого приходится на диапазон от десятков кэВ до десятков МэВ и выше.~\cite{Shevelev2014} Эмиссия из объёма плазмы доминирует в том случае, когда убегающие электроны хорошо удерживаются, а тормозное излучение от конструкций токамака преобладает во время быстрого выхода убегающих электронов в связи с МГД неустойчивостями, или если линия обзора спектрометра пересекает лимитер, а так же в некоторых других случаях.~\cite{Breizman2019}
 
-Тормозное излучение убегающих электронов может быть зарегистрированно с помощью сцинтилляционных детекторов, таких как NaI(Ti), BGO, LaBr3(Ce). От детекторов требуется регистрировать излучение в большом диапазоне энергий (от десятков-сотен кэВ и до дестятков МэВ), а так же с работать в том числе с высокой скоростью счёта (до $10^5$ -- $10^6$ c${}^-1$ и выше); дететоры должны работать в магнитных полях. На крупных токамаках, таких как ИТЭР, так же присутствуют и другие факторы: высокая температура и нейтронные поля в местах установки детекторов рентгеновского излучения. Зарегистрированный спектр рентгеновского излучения сложным образом зависит от функции распределения электронов, генерирующих излучение, от параметров конструктивных элементов, находящихся между источником излучения и детектором, а так же от аппаратной функции самого детектора. Таким образом, определение параметров пучка убегающих электронов и восстановление их функции распределения по энергии представляет собой непростую задау. 
+Тормозное излучение убегающих электронов может быть зарегистрированно с помощью сцинтилляционных детекторов, таких как NaI(Ti), BGO, LaBr3(Ce). Детекторы должны быть способны регистрировать излучение в большом диапазоне энергий (от десятков-сотен кэВ и до дестятков МэВ), а так же с работать с высокой скоростью счёта (до $10^5$ -- $10^6$~c${}^{-1}$ и выше); дететоры должны работать в магнитных полях. На крупных токамаках, таких как ИТЭР, так же присутствуют и другие факторы: высокая температура и нейтронные поля в местах установки детекторов рентгеновского излучения. Зарегистрированный спектр рентгеновского излучения сложным образом зависит от функции распределения электронов, генерирующих излучение, от параметров конструктивных элементов, находящихся между источником излучения и детектором, а так же от аппаратной функции самого детектора. Таким образом, определение параметров пучка убегающих электронов и их функции распределения по энергии представляет собой непростую задау. 
 
-Большие токамаки, такие как JET и ASDEX Upgrade, представляют собой несомненный интерес в плане изучения убегающих электронов. В отличие от малых токамаков, в больших установках есть возможность регистрировать тормозное рентгеновское излучение не от взаимодействия пучка электронов со стенкой (то есть от уже покинувших объём плазмы), а непосредственно из плазмы, что позволяет исследовать эволюцию пучка во времени. Кроме того, крупные установки являются хорошим испытательным стендом для отработки методик, которые могут быть применены на будущих крупных токамаках, таких как ИТЭР. 
+Большие токамаки, такие как JET и ASDEX Upgrade, представляют собой несомненный интерес в плане изучения убегающих электронов. В отличие от малых токамаков, в больших установках есть возможность регистрировать тормозное рентгеновское излучение не от взаимодействия пучка электронов со стенкой (то есть от уже покинувших объём плазмы), а непосредственно из объёма плазмы, что позволяет исследовать эволюцию пучка во времени. Кроме того, крупные установки являются хорошим испытательным стендом для отработки методик, которые могут быть применены на будущих крупных токамаках, таких как ИТЭР. 
 
 
 % {\progress}
@@ -31,10 +32,10 @@
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Развить методы обработки сигналов гамма-спектроскопии, полученных в ходе измерений спектров жесткого рентгеновского излучения в плазменных экспериментах, с целью уменьшения числа просчётов (мёртвого времени) и увеличения стабильности измеряемого сигнала. Реализовать разработанные методы в программном коде;
+  \item Развить методы обработки сигналов гамма-спектроскопии, полученных в ходе измерений жесткого рентгеновского излучения с помощью сцинтиляционных детекторов в ходе экспериментов на токамаках, с целью уменьшения числа просчётов (мёртвого времени) и увеличения разрешения получаемых спектров. Реализовать разработанные методы в программном коде;
   \item Разработать методы восстановления функции распределения убегающих электронов по измеренному спектру рентгеновского излучения. Реализовать разработанные методы в программном коде;
-  \item Разработать гамма-спектрометр на основе детектора LaBr3(Ce) для диагностики убегающих электронов на токамаке ASDEX Upgrade;
-  \item Исследовать с помощью методов гамма-спетрометрии поведение убегающих электронов на токамаках JET и Asdex Upgrade.
+  \item Разработать гамма-спектрометр на основе детектора LaBr3(Ce) для диагностики убегающих электронов на токамаке ASDEX Upgrade. Обеспечить неперывную запись сигнала с АЦП с этого спектрометра в течении всего разряда токамака, обработку сигнала, получение функции распредлеления убегающих электронво по энергии;
+  \item Исследовать с помощью методов гамма-спетрометрии поведение убегающих электронов в разрядах на токамаках JET и Asdex Upgrade.
 \end{enumerate}
 
 \textbf{Объект исследования:} убегающие электроны в плазме токамаков с энергией от 0.2~МэВ до 30~МэВ.
@@ -49,11 +50,11 @@
 
 {\influence}\begin{enumerate}[beginpenalty=10000]
   \item Создан программный код DeGaSum, в котором были реализованы разработанные методы обратоки сигналов с детекторов, а так же методы восстановления функции распределения убегающих электронов. Данный код  применяется при обработке экспериментальных данных на токамаках JET, Asdex Upgrade, а так же Глобус-М2, Туман-3М, ФТ-2;
-  \item Разработан гамма спектрометр на основе детектора LaBr3(Ce), который применялся для диагностики убегающих электронов на токамаке ASDEX Upgrade;
+  \item Разработан гамма спектрометр REGARDS на основе детектора LaBr3(Ce), который применялся для диагностики убегающих электронов на токамаке ASDEX Upgrade;
   \item Разработанные методики обработки гамма и рентгеновского излучения могут быть применены на токамаках нового поколения, включая ИТЭР и ТРТ.
 \end{enumerate}
 
-{\methods} 
+%{\methods} 
 
 {\defpositions}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
@@ -73,9 +74,21 @@
 
 {\probation}
 Основные результаты работы докладывались~на:
-перечисление основных конференций, симпозиумов и~т.\:п.
+\begin{itemize}
+  \item международной звенигородской конференции по физике плазмы и управляемому термоядерному синтезу в 2013, 2014, 2015, 2018~гг;
+  \item всероссийской конференция ``диагностика высокотемпературной плазмы'' в 2015 и 2019~г.
+\end{itemize}
 
-{\contribution} Автор принимал активное участие \ldots
+{\contribution} Автором \textbf{лично} сформулированы цель диссертационной работы и задачи, которые было необходимо решить для ее достижения; изучено современное состояние проблемы спектроскопических измерений жёсткого рентгеновского и гамма-излучения из плазмы; разработаны и развиты алгоритмы обработки сигнала со сцинтилляционного детектора (определение нулевой линии, определение амплитуд событий); развиты методы восстановления спектра излучения источника излучения по измеренному спектру; разработаны методы восстановления функции распределения убегающих электронов по энергии; разработаны способы сохранения сигнала с детектора REGARDS на токамаке Asdex Upgrade. Автор лично принимал участие в экспериментах с источниками излучения, которые использовались при отработке методик обработки сигналов сцинтилфционных детекторов и спектров излучения; принимал участие в экспериментах на токамаках Asdex Upgrade и JET. Автором единолично был написан компьютерный код DeGaSum, в котором им были реализованы разработанные и развитые методы обработки сигналов и спеткров, а так же с помощью которого происходит управление детектором REGARDS на токамаке Asdex Upgrade.
+
+Совместно с \textbf{научным руководителем работы к.ф.-м.н. Шевелевым~А.Е.} сформулированы направление и тема исследований; обсуждены, обобщены и интерпретированы полученные в диссертации данные; сформулированы выводы по работе, основные научные положения, выносимые на защиту, научная новизна и практическая ценность работы; проведены эксперименты с источниками излучения для отработки методик восстановления исходного спектра гамма излучения; обработаны результаты измерений с токамака Asdex Upgrade, восстановлены функции распределения, проведены оценки максимальной энергии убегающих электронов и плотности аргона в плазме.
+
+Совместно с \textbf{Шевелевым~А.Е., Ноченте~М. (Nocente~M.), Пантонин~Е. (Panontin~E)} введён в эксплуатацию спектрометр REGARDS, отработан сбор сигнала со спектрометра, проведены измерения на токамаке Asdex Upgrade, выполнена обработка сигнала и проведено обсуждение полученных результатов.
+
+Совместно с \textbf{Шевелевым~А.Е., Киптилым~В.Г., Плюсниным~В.В.} обработаны результаты измерений на токамаке JET, проведено обсуждение полученных резульатов, полученных в экспериментах с ИТЭР-подобной стенкой.
+
+Совместно с сотрудниками циклотронной лаборатории ФТИ им. А.Ф. Иоффе проведено измерение сигнала сцинтиляционного детектора в ходе эсперимента на циклотроне для отработки методик обработки сигнала со спектрометра.
+
 
 \ifnumequal{\value{bibliosel}}{0}
 {%%% Встроенная реализация с загрузкой файла через движок bibtex8. (При желании, внутри можно использовать обычные ссылки, наподобие `\cite{vakbib1,vakbib2}`).
