--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -13,7 +13,7 @@
   journal = {Plasma Physics and Controlled Fusion},
   authorscopus = {true},
   authorwos = {true},
-  addendum = {(Scopus, WoS)},
+  addendum = {(Scopus, WoS)}
 }
 
 @ARTICLE{Panontin2021,
@@ -30,13 +30,13 @@
   journal = {Journal of Instrumentation},
   authorscopus = {true},
   authorwos = {true},
-  addendum = {(Scopus, WoS)},
+  addendum = {(Scopus, WoS)}
 }
 
 @article{Shevelev2021,
   doi = {10.1088/1741-4326/ac2638},
   url = {https://doi.org/10.1088/1741-4326/ac2638},
-  year = 2021,
+  year = {2021},
   month = {9},
   publisher = {{IOP} Publishing},
   volume = {61},
@@ -45,6 +45,8 @@
   author = {A. Shevelev and E. Khilkevitch and M. Iliasova and M. Nocente and G. Pautasso and G. Papp and A.D. Molin and S.P. Pandya and V. Plyusnin and L. Giacomelli and G. Gorini and E. Panontin and D. Rigamonti and M. Tardocchi and G. Tardini and A. Patel and A. Bogdanov and I. Chugunov and D. Doinikov and V. Naidenov and I. Polunovsky and  the ASDEX Upgrade Team and  the EUROfusion MST1 Team},
   title = {Study of runaway electron dynamics at the {ASDEX} Upgrade tokamak during impurity injection using fast hard x-ray spectrometry},
   journal = {Nuclear Fusion},
+  authorscopus = {true},
+  authorwos = {true},
   addendum = {(Scopus, WoS)},
 }
 
@@ -216,7 +218,7 @@
   volume = {463},
   pages = {143-149},
   year = {2015},
-  note = {PLASMA-SURFACE INTERACTIONS 21},
+  note = {Plasma-surface interactions 21},
   issn = {0022-3115},
   doi = {https://doi.org/10.1016/j.jnucmat.2014.10.002},
   url = {https://www.sciencedirect.com/science/article/pii/S0022311514006850},
